Fix UI layout issues with chat and workbench panels

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -13,4 +13,5 @@ html,
 body {
   height: 100%;
   width: 100%;
+  background-color: var(--bolt-elements-bg-depth-1);
 }
